Ticket #103: Created a launcher based on ant to get the classpath loaded with the needed library.