@@ -1,2 +1,2 @@
-start javaw -Djava.ext.dirs=lib;lib\win32 -Djava.library.path=lib\win32 -jar lib\grand-ui.jar
+start ant -f grand-ui-launcher.xml
 exit
